--- a/cpp_study/Lecture01_10/Lecture01_10.vcxproj.filters
+++ b/cpp_study/Lecture01_10/Lecture01_10.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main_0102.cpp">
+    <ClCompile Include="Lecture01_10.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
