--- a/cpp_study/Lecture01_02/Lecture01_02.vcxproj.filters
+++ b/cpp_study/Lecture01_02/Lecture01_02.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lectur20.cpp">
+    <ClCompile Include="Lecture01_02.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
