--- a/cpp_study/Lecture07_16/Lecture07_16.vcxproj
+++ b/cpp_study/Lecture07_16/Lecture07_16.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{BC6C3CBD-829F-4217-8E55-DFD75AAE0C5C}</ProjectGuid>
+    <ProjectGuid>{6D354681-A146-4DAD-9631-FBF16B227394}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Lectur0710</RootNamespace>
+    <RootNamespace>Lecture0716</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lectur07_10.cpp" />
+    <ClCompile Include="Lecture07_16.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
