study until lecture13_05

--- a/cpp_study/Lecture13_04/Lecture13_04.vcxproj.filters
+++ b/cpp_study/Lecture13_04/Lecture13_04.vcxproj.filters
@@ -15,12 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lecture13_03.cpp">
+    <ClCompile Include="Lecture13_04.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Storage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyArray.h">
+    <ClInclude Include="Storage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
