--- a/cpp_study/Lecture13_04/Lecture13_04.vcxproj
+++ b/cpp_study/Lecture13_04/Lecture13_04.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{1214D5C1-5A72-4F3B-B1C3-58E57FD922C3}</ProjectGuid>
+    <ProjectGuid>{64847B9F-D1BE-441E-A0F7-B689FE04F684}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Lecture1303</RootNamespace>
+    <RootNamespace>Lecture1304</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -147,10 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lecture13_03.cpp" />
+    <ClCompile Include="Lecture13_04.cpp" />
+    <ClCompile Include="Storage.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyArray.h" />
+    <ClInclude Include="Storage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
