--- a/cpp_study/Lecture13_05/Lecture13_05.vcxproj.filters
+++ b/cpp_study/Lecture13_05/Lecture13_05.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lecture13_03.cpp">
+    <ClCompile Include="Lecture13_05.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyArray.h">
+    <ClInclude Include="Storage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
